[gd_scene load_steps=3 format=3 uid="uid://cojx3v0d1204n"]

[ext_resource type="Script" uid="uid://c7v3kkbmgsvof" path="res://Scenes/ScreenConfigurator/display_element.gd" id="2_q0b0h"]
[ext_resource type="Theme" uid="uid://dl6fvv3e5ioc0" path="res://GUI/MainTheme.tres" id="2_tmygy"]

[node name="DisplayElement" type="Node2D"]
script = ExtResource("2_q0b0h")

[node name="TopPosition" type="Node2D" parent="."]
position = Vector2(122, 2)
metadata/_edit_lock_ = true

[node name="BottomPosition" type="Node2D" parent="."]
position = Vector2(122, 133)
metadata/_edit_lock_ = true

[node name="LeftPosition" type="Node2D" parent="."]
position = Vector2(2, 68)
metadata/_edit_lock_ = true

[node name="RightPosition" type="Node2D" parent="."]
position = Vector2(238, 68)
metadata/_edit_lock_ = true

[node name="Outline" type="ColorRect" parent="."]
offset_right = 240.0
offset_bottom = 135.0
color = Color(1, 0.545098, 0, 1)
metadata/_edit_lock_ = true

[node name="Inner" type="ColorRect" parent="Outline"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 235.0
offset_bottom = 130.0
color = Color(0, 0, 0, 1)

[node name="DragButton" type="TextureButton" parent="Outline/Inner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DisplayIDLabel" type="Label" parent="Outline/Inner"]
layout_mode = 1
offset_right = 82.0
offset_bottom = 23.0
theme = ExtResource("2_tmygy")
text = " Display: ID "

[connection signal="mouse_entered" from="Outline/Inner/DragButton" to="." method="_on_drag_button_mouse_entered"]
[connection signal="mouse_exited" from="Outline/Inner/DragButton" to="." method="_on_drag_button_mouse_exited"]
